--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^15.12.0",
     "@nuxtjs/dotenv": "^1.4.1",
-    "@uniformdev/canvas": "^15.0.0",
-    "@uniformdev/canvas-contentful": "^15.0.0",
-    "@uniformdev/canvas-nuxt": "^14.2.0",
+    "@uniformdev/canvas": "14.2.0",
+    "@uniformdev/canvas-contentful": "14.2.0",
+    "@uniformdev/canvas-nuxt": "14.2.0",
     "@uniformdev/cli": "^15.0.0",
-    "@uniformdev/optimize-nuxt": "^14.2.0",
+    "@uniformdev/optimize-nuxt": "14.2.0",
     "contentful": "^9.1.18",
     "core-js": "^3.19.3",
     "isomorphic-unfetch": "^3.1.0",
