--- a/static/intentManifest.json
+++ b/static/intentManifest.json
@@ -1,7 +1,24 @@
 {
   "site": {
     "sampleSize": 0,
-    "intents": [],
+    "intents": [
+      {
+        "id": "interestedInDevops",
+        "signals": [
+          {
+            "type": "PVI",
+            "freq": "always",
+            "scope": "visitor",
+            "str": 50,
+            "path": {
+              "cs": false,
+              "expr": "/categories/devops",
+              "type": "exact"
+            }
+          }
+        ]
+      }
+    ],
     "enrichments": [
       {
         "name": "Interest"
